[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/meta_menu.gd" id="1_meta_menu"]

[node name="MetaMenu" type="CanvasLayer"]
script = ExtResource("1_meta_menu")

[node name="Panel" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -200.0
offset_right = 240.0
offset_bottom = 200.0

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
custom_minimum_size = Vector2(460, 360)

[node name="VBox" type="VBoxContainer" parent="Panel/MarginContainer"]

[node name="TitleLabel" type="Label" parent="Panel/MarginContainer/VBox"]
text = "Meta Progression"

[node name="ScrapLabel" type="Label" parent="Panel/MarginContainer/VBox"]
text = "Meta Scrap: 0"

[node name="RunsLabel" type="Label" parent="Panel/MarginContainer/VBox"]
text = "Total Runs: 0"

[node name="UpgradesLabel" type="Label" parent="Panel/MarginContainer/VBox"]
text = "Permanent Upgrades: 0"

[node name="StartButton" type="Button" parent="Panel/MarginContainer/VBox"]
text = "Start New Run"

[node name="MenuButton" type="Button" parent="Panel/MarginContainer/VBox"]
text = "Return to Menu"
